# modern-minimalistic-py

./: .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: security.yml  test.yml
hooks/: pre_gen_project.py
requirements/: all.txt  core-requirements.txt  core.txt  dev-requirements.txt  dev.txt  docs.txt  security.txt
sample/: example.py
tests/: test_example.py
{{cookiecutter.directory_name}}/: Makefile  README.md  pyproject.toml
{{cookiecutter.directory_name}}/.github/workflows/: security.yml
{{cookiecutter.directory_name}}/requirements/: all.txt  core.txt  dev.in  security.in
{{cookiecutter.directory_name}}/tests/: test_example.py
{{cookiecutter.project_name}}/: Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/: CODEOWNERS  dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: audit.yml  clean-workflow-runs.yml  coverage.yml  release.yml  security.yml  test.yml
{{cookiecutter.project_name}}/requirements/: core.txt  dev.txt
{{cookiecutter.project_name}}/scripts/: release_github.py
{{cookiecutter.project_name}}/tests/: test_example.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name.lower().replace('-', '_')}}/: example.py
