[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sample"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Tomas Perez Alvarez", email = "tomasperezalvarez@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
# https://hatch.pypa.io/latest/config/dependency/
dependencies = ["orjson >= 3.8.3"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/sample#readme"
Issues = "https://github.com/unknown/sample/issues"
Source = "https://github.com/unknown/sample"

[tool.hatch.version]
path = "sample/__about__.py"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs-material",
]

[tool.hatch.envs.dev]
detached = true
dependencies = [
  "ruff",
  "pip-tools"
]

[tool.hatch.envs.dev.scripts]
watch = "ruff . --watch"
resolve-deps = "pip-compile -o requirements.txt pyproject.toml"

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

[tool.hatch.envs.test.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=sample --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "sample/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
  "raise NotImplementedError"
]


[tool.ruff.isort]
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff]
line-length = 88

select = [
  "E",
  "F",
  "D",
  "W",
  "I",
  "C",
  "UP",
  "N",
  "ANN",
  "S",
  "BLE",
  "FBT",
  "A",
  "B",
  "C4",
  "T10",
  "ICN",
  "Q",
  "RET",
  "TID",
  "SIM",
  "ARG",
  "ERA",
  "PGH",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "RUF",
]

fix = true

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
]
per-file-ignores = {}

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
