[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sample"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Tomas Perez Alvarez", email = "tomasperezalvarez@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
# https://hatch.pypa.io/latest/config/dependency/
dependencies = ["orjson >= 3.8.3"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/sample#readme"
Issues = "https://github.com/unknown/sample/issues"
Source = "https://github.com/unknown/sample"

[tool.hatch.version]
path = "sample/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "ruff",
  "pip-tools",
  "mypy",
  "pytest",
  "pytest-cov",
  "black",
]

[tool.hatch.envs.default.scripts]
watch = "ruff . -w -q --config pyproject.toml"
resolve-deps = "pip-compile -o requirements.txt pyproject.toml --resolver=backtracking --generate-hashes"
coverage = "pytest  {args}"
test = "coverage --no-cov {args}"
lint = [
  "mypy .",
  "ruff .",
  "black ."
]

[tool.hatch.envs.docs]
detached = true
dependencies = [
  "mkdocs-material",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "sample/__about__.py",
]

[tool.coverage.report]
precision = 1
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
  "raise NotImplementedError"
]


[tool.ruff.isort]
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff]
# https://github.com/charliermarsh/ruff#is-ruff-compatible-with-black
line-length = 88

select = [
  "E",
  "F",
  "D",
  "W",
  "I",
  "C90",
  "UP",
  "N",
  "ANN",
  "S",
  "BLE",
  "FBT",
  "A",
  "B",
  "C4",
  "T20",
  "ICN",
  "Q",
  "RET",
  "TID",
  "SIM",
  "ARG",
  "ERA",
  "PGH",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "RUF",
  "YTT",
]

fix = true

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
]
per-file-ignores = {}

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
xfail_strict = true
addopts =[
  "--cov-fail-under=90", 
  "--cov-report=term-missing:skip-covered",
  "--cov-config=pyproject.toml",
  "--cov=sample",
  "--cov=tests"
]

[tool.mypy]
# temporarily ignore some files
show_error_codes = true
follow_imports = 'silent'
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_untyped_defs = true
